SF Primes/src/objects/Conversion__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Converted_Data__c</fullName>
        <label>Converted Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Conversion</label>
    <pluralLabel>Conversion</pluralLabel>
</CustomObject>